--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "buildlocal": "cp -r build ../backend/src/main/resources/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "/"
 }
