Update Dockerfile and application properties for production configuration; add WebSocket origin handling and upgrade Spring Boot version

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 # Set server port from environment variable PORT, default to 8080 if not set
 server.port=${PORT:8080}
 
-# Spring application name
+# Spring application configuration
 spring.application.name=TicTacTwo
+spring.profiles.active=local
+spring.config.import=optional:application-${spring.profiles.active}.yml
 
 # Logging configuration
 logging.level.root=INFO
+
+ALLOWED_ORIGINS=*
