--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "prebuildlocal": "rm -rf ../backend/src/main/resources/static && npm run build",
     "buildlocal": "cp -r build ../backend/src/main/resources/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
