--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Tic-Tac-Two Game",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "logo128.png",
       "sizes": "512x512 256x256 128x128 64x64 32x32 24x24 16x16",
       "type": "image/png"
     }
