--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,8 +3,33 @@
   "name": "Tic-Tac-Two Game",
   "icons": [
     {
+      "src": "logo16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "logo32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "logo64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
       "src": "logo128.png",
-      "sizes": "512x512 256x256 128x128 64x64 32x32 24x24 16x16",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "logo256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "logo512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
