--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,3 +1,7 @@
 server.port=10000
 
+spring.jmx.enabled=false
+logging.level.org.springframework.web: INFO
+logging.level.org.hibernate: ERROR
+
 ALLOWED_ORIGINS=tic-tac-two.onrender.com
