--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=${PORT:8080}
 
 # Spring application configuration
+spring.main.banner-mode=off
 spring.application.name=TicTacTwo
 spring.profiles.active=local
 spring.config.import=optional:application-${spring.profiles.active}.yml
