update broadcast time from 5 to 2 seconds and add room id in case of custom room

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tic-Tac-Two",
-  "name": "Tic-Tac-Two Game",
+  "short_name": "tic-tac-two",
+  "name": "tic-tac-two game",
   "icons": [
     {
       "src": "logo16.png",
