--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^18.3.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.0",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.10",
